# ecosmic

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
algorithm/: main.cpp
api/: main.py  requirements.txt
cli/: main.py
cpe/: CMakeLists.txt  CollisionProbabilityEstimator.cpp  CollisionProbabilityEstimator.h  main.cpp  utils.cpp  utils.h
dequeuer/: dequeuer.sh
docs/: async_execution.md  aws architecture.odg  example.cdm  example.cpe  example1.cdm  onboarding.md  requirements.txt  roadmap.md
iac/: main.tf
tests/: CMakeLists.txt  CollisionProbabilityEstimatorTest.cpp  ParseDoublesTest.cpp
